<resources>
    <string name="app_name">LiteApp</string>
    <string name="registration">Реєстрація</string>
    <string name="email">Email</string>
    <string name="username">Логін</string>
    <string name="password">Пароль</string>
    <string name="repeatPassword">Повторіть пароль</string>
    <string name="firstname">Ім\'я</string>
    <string name="lastname">Прізвище</string>
    <string name="selectImage">Обрати фото</string>
    <string name="userPhoto">User\'s photo</string>
    <string name="login">Вхід</string>
    <string name="loginButton">Увійти</string>
    <string name="registerButton">Зареєструватися</string>
    <string name="home">Домашня сторінка</string>
    <string name="search">Пошук</string>
    <string name="main_page_header">Головна сторінка</string>
    <string name="menu_home">Головна</string>
    <string name="menu_login">Вхід</string>
    <string name="menu_register">Реєстрація</string>
    <string name="menu_account">Акаунт</string>
    <string name="pizzas_header">Піци</string>
    <string name="pizza_image_desc">Фото піци</string>
    <string name="pizza_name_placeholder">Назва піци</string>
    <string name="pizza_description_placeholder">Опис: %s</string>
    <string name="pizza_rating_placeholder">Рейтинг: %.2f</string>
    <string name="pizza_availability_placeholder">Чи доступна піца</string>
    <string name="pizza_ingredients_placeholder">Інгредієнти:</string>
    <string name="pizza_sizes_placeholder">Розміри:</string>
    <string name="available">Є у наявності</string>
    <string name="not_available">Немає у наявності</string>
    <string name="logout">Вийти</string>
</resources>